Fix CSS overflow in console UI

--- a/Tools/WinML-Dashbaord/src/view/convert/View.css
+++ b/Tools/WinML-Dashbaord/src/view/convert/View.css
@@ -14,13 +14,13 @@
     flex: 1;
 }
 
-.ConvertViewSplit {
+.ConvertViewSplit, .ConverterViewConsole {
     overflow: auto;
 }
 
 .ConverterViewConsole {
     display: block;
-    max-height: 350px;
+    max-height: 400px;
 }
 
 #ConverterModelInputBrowse {
